Bug 12256 - In call_trans2qfilepathinfo we call stat() instead of lstat() in POSIX paths context
Summary: In call_trans2qfilepathinfo we call stat() instead of lstat() in POSIX paths ...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
: 12365 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-09-12 13:04 UTC by Ralph Böhme
Modified: 2016-10-05 15:09 UTC (History)
2 users (show)

See Also:


Attachments
Patch for 4.4 and 4.5 cherry-picked from master (1.87 KB, patch)
2016-09-12 20:03 UTC, Ralph Böhme
jra: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2016-09-12 13:04:34 UTC
In an netinfo request with info level SMB_INFO_QUERY_ALL_EAS in an SMB session with UNIX extensions enabled, we end up calling stat() instead of lstat() because SMB_INFO_QUERY_ALL_EAS is not covered by INFO_LEVEL_IS_UNIX().

Have patch, need bug number.
Comment 1 Ralph Böhme 2016-09-12 20:03:05 UTC
Created attachment 12458 [details]
Patch for 4.4 and 4.5 cherry-picked from master

This is definitely needed in 4.5 and I believe in 4.4 as well, Jeremy can you please double check? Thanks!
Comment 2 Jeremy Allison 2016-09-13 20:47:08 UTC
Comment on attachment 12458 [details]
Patch for 4.4 and 4.5 cherry-picked from master

LGTM.
Comment 3 Jeremy Allison 2016-09-13 20:47:31 UTC
Re-assigning to Karolin for inclusion in 4.5.next, 4.4.next.
Comment 4 Karolin Seeger 2016-09-16 06:58:57 UTC
(In reply to Jeremy Allison from comment #3)
Pushed to autobuild-v4-{4,5}-test.
Comment 5 Karolin Seeger 2016-09-20 07:38:47 UTC
(In reply to Karolin Seeger from comment #4)
Pushed to both branches.
Closing out bug report.

Thanks!
Comment 6 Ralph Böhme 2016-10-05 15:09:17 UTC
*** Bug 12365 has been marked as a duplicate of this bug. ***